JVM GC update4